--- a/AutoTranslateXIV.yaml
+++ b/AutoTranslateXIV.yaml
@@ -2,6 +2,5 @@ name: AutoTranslateXIV
 author: Icehunter
 description: |-
   Translates Stuff
-  Adding '/xt'
-punchline: Translate From A to B. - /xt en ja Hello!
+punchline: Translates From A to B where A/B are set in config.
 repo_url: https://github.com/Icehunter/AutoTranslateXIV
